--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,44 @@
 body {
   background: #27251f;
   color: #dde1e4fa;
-  font-family: "M PLUS 1p", sans-serif;
+  font-family: 'M PLUS 1p', sans-serif;
   padding: 1% 5vw;
+}
+h1,
+h2 {
+  margin: 0;
+  line-height: 1;
+}
+h2 {
+  line-height: 2;
+  font-size: 38px;
+}
+.box > div {
+  padding: 24px;
+  opacity: 0.9;
+  transition: 0.4s;
+  border-radius: 24px;
+  border: 4px solid #000;
+}
+.ice {
+  background-color: rgba(63, 134, 150, 0.8);
+}
+.water {
+  background-color: rgba(26, 88, 202, 0.8);
+}
+.steam {
+  background-color: rgba(202, 50, 26, 0.8);
+}
+
+button {
+  padding: 8px 20px;
+  font-size: 18px;
+  margin-right: 6px;
+  border-radius: 8px;
+  transition: 0.3s;
+}
+button:hover {
+  cursor: pointer;
+  background: #000;
+  color: #fff;
 }
